# Google-Drive-Sync

./: .flake8  .gdriveignore  Makefile  README.md  create_init_files.sh  install.sh  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_docker.sh  run_local.sh  setup.py  uninstall.sh  update_init_files.py  verify.sh
.github/workflows/: test.yml
config/: download.json  sync.json  upload.json
docker/: .dockerignore  Dockerfile  crontab  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  healthcheck.sh
gdrive_sync/: __init__.py
gdrive_sync/application/: __init__.py  cli.py  menu.py
gdrive_sync/config/: __init__.py  app.json  loader.py  models.py
gdrive_sync/config/examples/: app.json  download.json  sync.json  upload.json
gdrive_sync/domain/: __init__.py  enums.py  models.py
gdrive_sync/infrastructure/drive/: __init__.py  file_handler.py  path_resolver.py
gdrive_sync/infrastructure/logging/: __init__.py  metrics_logger.py
gdrive_sync/infrastructure/storage/: __init__.py  compression.py  metadata.py  space_checker.py
gdrive_sync/services/: __init__.py  analysis_service.py  auth_service.py  exclusion_service.py  sync_service.py
gdrive_sync/tests/: __init__.py  conftest.py  pytest.ini
gdrive_sync/tests/test_config/: __init__.py  test_models.py
gdrive_sync/tests/test_domain/: __init__.py  test_models.py
gdrive_sync/tests/test_infrastructure/test_drive/: __init__.py  test_path_resolver.py
gdrive_sync/tests/test_infrastructure/test_storage/: __init__.py  test_compression.py  test_metadata.py  test_space_checker.py
gdrive_sync/tests/test_integration/: __init__.py  test_end_to_end.py
gdrive_sync/tests/test_services/: __init__.py  test_analysis_service.py  test_auth_service.py  test_exclusion_service.py
gdrive_sync/utils/: __init__.py  constants.py
